--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
         <tr>
           <th>Task-6</th>
           <td>
-            <a href="#" class="btn btn-dark">Repo Link-6</a>
+            <a href="https://github.com/nishanth9491/web" class="btn btn-dark">Repo Link-6</a>
           </td>
           <td>
-            <a href="#" class="btn btn-dark">Website Link-6</a>
+            <a href="https://nishanth.vercel.app/" class="btn btn-dark">Website Link-6</a>
           </td>
         </tr>
       </table>
